# prima

./: .gitignore  Cargo.toml
rust/prima_sys/: Cargo.toml  build.rs  prima_bindgen.h
rust/prima_sys/examples/: bobyqa.rs  cobyla.rs  lincoa.rs  newuoa.rs  uobyqa.rs
rust/prima_sys/src/: lib.rs
