[package]
name = "prima_sys"
description = "Rust bindings to the C interface of PRIMA: M. J. D. Powell's Derivative Free Optimization Methods"
version = "0.1.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/libprima/prima"
license = "BSD-3-Clause"
keywords = ["PRIMA", "optimization", "ffi", "bindings"]
categories = ["external-ffi-bindings", "mathematics", "science"]

[build-dependencies]
bindgen = "0.70"
cmake = "0.1"
git2 = "0.19"

[lib]
doctest = false

[[example]]
name = "bobyqa"
path = "examples/bobyqa.rs"
test = true
harness = false

[[example]]
name = "cobyla"
path = "examples/cobyla.rs"
test = true
harness = false

[[example]]
name = "lincoa"
path = "examples/lincoa.rs"
test = true
harness = false

[[example]]
name = "newuoa"
path = "examples/newuoa.rs"
test = true
harness = false

[[example]]
name = "uobyqa"
path = "examples/uobyqa.rs"
test = true
harness = false
